--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.0",
     "next": "16.0.3",
+    "prisma": "^7.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
